Fix bugs related to feedback button visibility.

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -1184,7 +1184,7 @@ textarea {
 /* NOTE TO DEVELOPERS: This value should be updated in
    windowDimensionsService if changed.
  */
-@media(max-width: 651px) {
+@media(max-width: 768px) {
   .navbar-nav.oppia-navbar-nav > li > a {
     display: none;
   }
